export/html: fix z-index for copy-to-clipboard so that it does not overlap the node addition menu

--- a/strictdoc/export/html/_static/element.css
+++ b/strictdoc/export/html/_static/element.css
@@ -276,7 +276,7 @@ sdoc-field-content {
 
 .copy_to_clipboard-cover {
   position: absolute;
-  z-index: 100;
+  z-index: 98;
   top: 0;
   bottom: 0;
   left: 0;
